                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 11-09-2006 fixed: Slow queuing of library folders (such as a Genre folder) due to recursive database lookups.  "Solved" by just queuing the "all" item under each category.  Sort order will be the same as if you queue the "All" item under the category.
 - 11-09-2006 fixed: [ 1555716 ] system.profilethumb not displayed
 - 11-09-2006 fixed: led on playback control was broken
 - 10-09-2006 fixed: smartxx pwm control memory leak
 - 10-09-2006 added: Disable all logging through <loglevel>-1</loglevel>
 - 10-09-2006 fixed: system information used 390k memory all the time (even when not on screen).
 - 10-09-2006 updated: Dutch language file (Thnx to MrNice)
 - 10-09-2006 updated: Polish language file (Thnx to smuto)
 - 10-09-2006 updated: Italian language file (Thnx to kotix)
 - 10-09-2006 updated: Norwegian language file (Thnx to vnm)
 - 10-09-2006 updated: French language file (Thnx to zeewul)
 - 10-09-2006 fixed: paplayer doesn't set its internal state to resume when skipping to next track when paused
 - 10-09-2006 fixed: directory listing in pictures crashes when a playlist is in a directory
 - 09-09-2006 changed: handle fribidi flipping in xbmc instead of mplayer for bidirectional subs
 - 09-09-2006 fixed: LED setting "no Change" can switch off the LED
 - 09-09-2006 fixed: SystemInfo, extended memunit port detection 
 - 09-09-2006 changed: LCD Contrast adjustment is not supported by Xecuter3 Modchip
 - 09-09-2006 fixed: LCD SmartXX v3 and OPX Contrast Control method was inaccurately