@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 11-09-2006 fixed: [ 1555436 ] partymode ---> open a playlist failed on single stream "playlists"
  - 11-09-2006 fixed: Slow queuing of library folders (such as a Genre folder) due to recursive database lookups.  "Solved" by just queuing the "all" item under each category.  Sort order will be the same as if you queue the "All" item under the category.
  - 11-09-2006 fixed: [ 1555716 ] system.profilethumb not displayed
  - 11-09-2006 fixed: led on playback control was broken
